# PortExample344_Vscode

./: .cproject  .gitignore  .project  CMakeLists.txt  DEF.mk  Makefile  RTD.mk  S32DS.cmake  S32DS.mk  linker_flash_s32k344.ld  project_parameters.mk
TresosProject/Port_Example_S32K344/: .project
TresosProject/Port_Example_S32K344/.prefs/: GenerateAllVariants_pref_wizard.xdm  VS_0_pref_wizard.xdm  pref_general.xdm  preferences_renamed.xdm.old
TresosProject/Port_Example_S32K344/config/: BaseNXP.xdm  Dem.xdm  Dio.xdm  EcuC.xdm  Mcu.xdm  Platform.xdm  Port.xdm  Resource.xdm  SystemModel2.tdb
src/: main.c
